# hp-face-recognizer-wasm

./: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
post_process_wasm/: Cargo.toml  LICENSE_MIT
post_process_wasm/src/: lib.rs
src/: App.vue  inference.ts  style.css  vite-env.d.ts
src/assets/models/: face_recognition_sim.onnx  retinaface_mobilenet_only_nn_sim.onnx  retinaface_only_nn_sim.onnx  retinaface_sim.onnx
src/components/: FaceView.vue  FileView.vue  Inference.vue
src/routes/: +page.svelte  Inference.svelte
