[package]
name = "post_process_wasm"
version = "0.1.0"
authors = ["yayoimizuha <poko.peko.tomo@icloud.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "*" }
wasm-bindgen-futures = "0.4.41"
ndarray = { version = "*" }
powerboxesrs = { version = "*" }
getrandom = {version = "*",features = ["js"]}

[dependencies.zip]
version = "0.10.0-alpha.1"
default-features = false
features = ["read-deflate"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
wasm-pack = { version = "*" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
